Sun Jul 29 08:24:22 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* html.c: export html-images dir if non-existing
	* gtkgame.c: always export images to html-images/

Sun Jul 29 00:42:50 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* multithread.c: another attempt to fix the check for all tasks done
	* rollout.c: fix mt rollout bug (wrong count)

Wed Jul 18 14:35:32 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkboard.c, gtkgame.c, gtkgame.h, gtkgamelist.c, gtkoptions.c,
	gtkpanels.c, gtkprefs.c, gtktoolbar.c, play.c, render.c, renderprefs.c,
	board3d/fun3d.h, board3d/graph.c, board3d/misc3d.c, board3d/widget3d.c:
	Allow startup in 2D mode if gtk_gl_init_check fails

Sat Jul 14 22:54:29 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* multithread.c: Fix hangup when all task done signal was missed and fix a
	closing bug for gthreads. Win32 threads are likely a bit messed up after
	these changes.

Sat Jul 14 22:53:32 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkchequer.[ch]: Add quick rollout buttons

Sat Jul 14 22:50:07 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* export.c, import.c: Fix two Jellyfish MAT format bugs. One import and
	one export.

Sat Jul 14 22:47:19 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, set.c: Fix a couple of set sound options.

Sat Jul 14 22:41:22 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.w32, Makefile.am, bearoffdump.c, getopt*, makebearoff.c,
	makebearoff1.c, makehyper.c, tctutorial.h, lib/Makefile.am,
	lib/hashtest.c, lib/md5test.c: Code clean, remove unused test programs and
	getopt.

Wed Jul 11 15:37:49 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.w32: Delete a few unused files
	* eval.c: Fix startup bug when gnubg.wd was missing

Tue Jul 10 17:22:33 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* set.c, show.c, gnubg.c: Fix a language setting problem

Tue Jul 10 10:42:39 CEST 2007 Christian Anthon <anthon@kiku.dk>
